--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ description = ""
 authors = ["DrugowitschLab"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9,<3.12"
 numpy = "^1.18.2"
 pandas = "^1.0.3"
-scipy = "^1.4.1"
+scipy = "^1.6.2"
 matplotlib = "^3.2.1"
 torch = "^1.4.0"
 notebook = "^6.0.3"
-jupyterlab = "^2.1.0"
+jupyterlab = "^2.0.0"
 click = "^7.1.1"
 ipython = "^7.13.0"
 seaborn = "^0.10.1"
